--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ material3 = "1.3.2"
 retrofit = "3.0.0"
 systemuicontroller = "0.36.0"
 ui = "1.9.1"
+workRuntimeKtx = "2.10.4"
 
 
 [libraries]
@@ -49,6 +50,7 @@ material3 = { group = "androidx.compose.material3", name = "material3", version.
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
